address comments: add codec, rename config names, and process as is when max_retry exhauses etc
Signed-off-by: Xun Zhang <xunzh@amazon.com>