@@ -10,14 +10,18 @@
 package org.opensearch.dataprepper.plugins.source.s3;
 
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.opensearch.dataprepper.expression.ExpressionEvaluator;
+import org.opensearch.dataprepper.model.codec.InputCodec;
+import org.opensearch.dataprepper.model.configuration.PluginModel;
+import org.opensearch.dataprepper.model.configuration.PluginSetting;
 import org.opensearch.dataprepper.model.event.Event;
+import org.opensearch.dataprepper.model.plugin.PluginFactory;
+import org.opensearch.dataprepper.model.record.Record;
 import org.opensearch.dataprepper.plugins.source.s3.configuration.S3ScanProcessingCondition;
 import software.amazon.awssdk.core.ResponseInputStream;
 import software.amazon.awssdk.http.AbortableInputStream;
@@ -27,18 +31,21 @@ import software.amazon.awssdk.services.s3.model.GetObjectResponse;
 import software.amazon.awssdk.services.s3.model.NoSuchKeyException;
 
 import java.io.ByteArrayInputStream;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.function.Consumer;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
-import static org.hamcrest.Matchers.sameInstance;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -58,98 +65,73 @@ class S3ScanProcessingConditionEvaluatorTest {
     @Mock
     private ExpressionEvaluator expressionEvaluator;
 
+    @Mock
+    private PluginFactory pluginFactory;
+
     private S3ScanProcessingConditionEvaluator objectUnderTest;
 
     @BeforeEach
     void setUp() {
-        objectUnderTest = new S3ScanProcessingConditionEvaluator(s3Client, expressionEvaluator);
+        objectUnderTest = new S3ScanProcessingConditionEvaluator(
+                s3Client, expressionEvaluator, pluginFactory, Collections.emptyList());
     }
 
     // -------------------------------------------------------------------------
-    // allConditionsMet — null / empty guards
+    // firstUnmetCondition — null / empty guards
     // -------------------------------------------------------------------------
 
     @Test
-    void allConditionsMet_when_conditions_is_null_then_returns_true() {
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, null), is(true));
+    void firstUnmetCondition_when_conditions_is_null_then_returns_empty() {
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, null), is(Optional.empty()));
         verify(s3Client, never()).getObject(any(GetObjectRequest.class));
     }
 
     @Test
-    void allConditionsMet_when_conditions_is_empty_then_returns_true() {
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, Collections.emptyList()), is(true));
+    void firstUnmetCondition_when_conditions_is_empty_then_returns_empty() {
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, Collections.emptyList()), is(Optional.empty()));
         verify(s3Client, never()).getObject(any(GetObjectRequest.class));
     }
 
     // -------------------------------------------------------------------------
-    // allConditionsMet — include_prefix filtering
+    // firstUnmetCondition — applicable_prefix filtering
     // -------------------------------------------------------------------------
 
     @Test
-    void allConditionsMet_when_object_key_does_not_match_include_prefix_then_condition_is_skipped() {
+    void firstUnmetCondition_when_object_key_does_not_match_applicable_prefix_then_condition_is_skipped() {
         final S3ScanProcessingCondition condition = conditionWithPrefix(
                 MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("different-prefix/"));
 
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(condition)), is(true));
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition)), is(Optional.empty()));
         verify(s3Client, never()).getObject(any(GetObjectRequest.class));
     }
 
     @Test
-    void allConditionsMet_when_include_prefix_is_empty_list_condition_applies_to_all_objects() {
-        final S3ScanProcessingCondition condition = conditionWithPrefix(
-                MANIFEST_FILE_NAME, WHEN_EXPRESSION, Collections.emptyList());
-        stubManifest(MANIFEST_KEY, "{\"totalRecordCount\":100,\"processedRecordCount\":100}");
-        when(expressionEvaluator.evaluateConditional(eq(WHEN_EXPRESSION), any(Event.class))).thenReturn(true);
-
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(condition)), is(true));
-    }
-
-    @Test
-    void allConditionsMet_when_include_prefix_is_null_condition_applies_to_all_objects() {
-        final S3ScanProcessingCondition condition = conditionWithPrefix(
-                MANIFEST_FILE_NAME, WHEN_EXPRESSION, null);
-        stubManifest(MANIFEST_KEY, "{\"totalRecordCount\":100,\"processedRecordCount\":100}");
-        when(expressionEvaluator.evaluateConditional(eq(WHEN_EXPRESSION), any(Event.class))).thenReturn(true);
-
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(condition)), is(true));
-    }
-
-    @Test
-    void allConditionsMet_when_object_key_matches_one_of_multiple_prefixes_then_condition_applies() {
+    void firstUnmetCondition_when_object_key_matches_one_of_multiple_prefixes_then_condition_applies() {
         final S3ScanProcessingCondition condition = conditionWithPrefix(
                 MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("no-match/", "output/"));
         stubManifest(MANIFEST_KEY, "{\"totalRecordCount\":50,\"processedRecordCount\":50}");
         when(expressionEvaluator.evaluateConditional(eq(WHEN_EXPRESSION), any(Event.class))).thenReturn(true);
 
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(condition)), is(true));
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition)), is(Optional.empty()));
     }
 
     // -------------------------------------------------------------------------
-    // allConditionsMet — expression evaluation
+    // firstUnmetCondition — expression evaluation
     // -------------------------------------------------------------------------
 
     @Test
-    void allConditionsMet_when_expression_evaluates_to_true_then_returns_true() {
-        final S3ScanProcessingCondition condition = conditionWithPrefix(
-                MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("output/"));
-        stubManifest(MANIFEST_KEY, "{\"totalRecordCount\":200,\"processedRecordCount\":200}");
-        when(expressionEvaluator.evaluateConditional(eq(WHEN_EXPRESSION), any(Event.class))).thenReturn(true);
-
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(condition)), is(true));
-    }
-
-    @Test
-    void allConditionsMet_when_expression_evaluates_to_false_then_returns_false() {
+    void firstUnmetCondition_when_expression_evaluates_to_false_then_returns_that_condition() {
         final S3ScanProcessingCondition condition = conditionWithPrefix(
                 MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("output/"));
         stubManifest(MANIFEST_KEY, "{\"totalRecordCount\":200,\"processedRecordCount\":100}");
         when(expressionEvaluator.evaluateConditional(eq(WHEN_EXPRESSION), any(Event.class))).thenReturn(false);
 
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(condition)), is(false));
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition)),
+                is(Optional.of(condition)));
     }
 
     @Test
-    void allConditionsMet_passes_manifest_json_fields_to_expression_evaluator() {
+    void firstUnmetCondition_passes_manifest_json_fields_to_expression_evaluator() {
         final String manifestJson = "{\"totalRecordCount\":50000,\"processedRecordCount\":8088}";
         final S3ScanProcessingCondition condition = conditionWithPrefix(
                 MANIFEST_FILE_NAME, WHEN_EXPRESSION, null);
@@ -158,7 +140,7 @@ class S3ScanProcessingConditionEvaluatorTest {
         final ArgumentCaptor<Event> eventCaptor = ArgumentCaptor.forClass(Event.class);
         when(expressionEvaluator.evaluateConditional(eq(WHEN_EXPRESSION), eventCaptor.capture())).thenReturn(true);
 
-        objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(condition));
+        objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition));
 
         final Event capturedEvent = eventCaptor.getValue();
         assertThat(capturedEvent.get("totalRecordCount", Integer.class), equalTo(50000));
@@ -166,17 +148,17 @@ class S3ScanProcessingConditionEvaluatorTest {
     }
 
     // -------------------------------------------------------------------------
-    // allConditionsMet — manifest key resolution
+    // firstUnmetCondition — manifest key resolution
     // -------------------------------------------------------------------------
 
     @Test
-    void allConditionsMet_manifest_key_uses_same_directory_as_object_key() {
+    void firstUnmetCondition_manifest_key_uses_same_directory_as_object_key() {
         final S3ScanProcessingCondition condition = conditionWithPrefix(
                 MANIFEST_FILE_NAME, WHEN_EXPRESSION, null);
         stubManifest(MANIFEST_KEY, "{\"totalRecordCount\":1,\"processedRecordCount\":1}");
         when(expressionEvaluator.evaluateConditional(any(), any())).thenReturn(true);
 
-        objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(condition));
+        objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition));
 
         final ArgumentCaptor<GetObjectRequest> requestCaptor = ArgumentCaptor.forClass(GetObjectRequest.class);
         verify(s3Client).getObject(requestCaptor.capture());
@@ -185,14 +167,14 @@ class S3ScanProcessingConditionEvaluatorTest {
     }
 
     @Test
-    void allConditionsMet_when_object_key_has_no_directory_manifest_key_is_just_the_file_name() {
+    void firstUnmetCondition_when_object_key_has_no_directory_manifest_key_is_just_the_file_name() {
         final String rootObjectKey = "rootfile.out";
         final S3ScanProcessingCondition condition = conditionWithPrefix(
                 MANIFEST_FILE_NAME, WHEN_EXPRESSION, null);
         stubManifest(MANIFEST_FILE_NAME, "{\"totalRecordCount\":1,\"processedRecordCount\":1}");
         when(expressionEvaluator.evaluateConditional(any(), any())).thenReturn(true);
 
-        objectUnderTest.allConditionsMet(BUCKET, rootObjectKey, List.of(condition));
+        objectUnderTest.firstUnmetCondition(BUCKET, rootObjectKey, List.of(condition));
 
         final ArgumentCaptor<GetObjectRequest> requestCaptor = ArgumentCaptor.forClass(GetObjectRequest.class);
         verify(s3Client).getObject(requestCaptor.capture());
@@ -200,37 +182,38 @@ class S3ScanProcessingConditionEvaluatorTest {
     }
 
     // -------------------------------------------------------------------------
-    // allConditionsMet — error cases
+    // firstUnmetCondition — error cases
     // -------------------------------------------------------------------------
 
     @Test
-    void allConditionsMet_when_manifest_file_not_found_then_returns_false() {
+    void firstUnmetCondition_when_manifest_file_not_found_then_returns_that_condition() {
         final S3ScanProcessingCondition condition = conditionWithPrefix(
                 MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("output/"));
         when(s3Client.getObject(any(GetObjectRequest.class)))
                 .thenThrow(NoSuchKeyException.builder().message("Not Found").build());
 
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(condition)), is(false));
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition)),
+                is(Optional.of(condition)));
         verify(expressionEvaluator, never()).evaluateConditional(any(), any());
     }
 
     @Test
-    void allConditionsMet_when_s3_read_throws_unexpected_exception_then_returns_false() {
+    void firstUnmetCondition_when_s3_read_throws_unexpected_exception_then_returns_empty() {
         final S3ScanProcessingCondition condition = conditionWithPrefix(
                 MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("output/"));
         when(s3Client.getObject(any(GetObjectRequest.class)))
                 .thenThrow(new RuntimeException("S3 connectivity error"));
 
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(condition)), is(false));
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition)), is(Optional.empty()));
         verify(expressionEvaluator, never()).evaluateConditional(any(), any());
     }
 
     // -------------------------------------------------------------------------
-    // allConditionsMet — multiple conditions
+    // firstUnmetCondition — multiple conditions
     // -------------------------------------------------------------------------
 
     @Test
-    void allConditionsMet_when_all_applicable_conditions_pass_then_returns_true() {
+    void firstUnmetCondition_when_all_applicable_conditions_pass_then_returns_empty() {
         final String whenA = "/fieldA == /fieldB";
         final String whenB = "/fieldC == /fieldD";
         final S3ScanProcessingCondition conditionA = conditionWithPrefix("manifestA.out", whenA, List.of("output/"));
@@ -241,23 +224,41 @@ class S3ScanProcessingConditionEvaluatorTest {
         when(expressionEvaluator.evaluateConditional(eq(whenA), any(Event.class))).thenReturn(true);
         when(expressionEvaluator.evaluateConditional(eq(whenB), any(Event.class))).thenReturn(true);
 
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(conditionA, conditionB)), is(true));
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(conditionA, conditionB)),
+                is(Optional.empty()));
     }
 
     @Test
-    void allConditionsMet_when_first_condition_fails_then_returns_false_without_evaluating_second() {
+    void firstUnmetCondition_when_first_condition_fails_returns_it_without_evaluating_second() {
         final S3ScanProcessingCondition conditionA = conditionWithPrefix("manifestA.out", WHEN_EXPRESSION, List.of("output/"));
         final S3ScanProcessingCondition conditionB = conditionWithPrefix("manifestB.out", "/x == /y", List.of("output/"));
 
         stubManifest("output/job-123/manifestA.out", "{\"totalRecordCount\":10,\"processedRecordCount\":5}");
         when(expressionEvaluator.evaluateConditional(eq(WHEN_EXPRESSION), any(Event.class))).thenReturn(false);
 
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(conditionA, conditionB)), is(false));
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(conditionA, conditionB)),
+                is(Optional.of(conditionA)));
         verify(expressionEvaluator, never()).evaluateConditional(eq("/x == /y"), any());
     }
 
     @Test
-    void allConditionsMet_skips_non_matching_condition_and_evaluates_matching_one() {
+    void firstUnmetCondition_when_first_condition_passes_and_second_fails_returns_second() {
+        final String whenA = "/fieldA == /fieldB";
+        final String whenB = "/fieldC == /fieldD";
+        final S3ScanProcessingCondition conditionA = conditionWithPrefix("manifestA.out", whenA, List.of("output/"));
+        final S3ScanProcessingCondition conditionB = conditionWithPrefix("manifestB.out", whenB, List.of("output/"));
+
+        stubManifest("output/job-123/manifestA.out", "{\"fieldA\":1,\"fieldB\":1}");
+        stubManifest("output/job-123/manifestB.out", "{\"fieldC\":1,\"fieldD\":2}");
+        when(expressionEvaluator.evaluateConditional(eq(whenA), any(Event.class))).thenReturn(true);
+        when(expressionEvaluator.evaluateConditional(eq(whenB), any(Event.class))).thenReturn(false);
+
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(conditionA, conditionB)),
+                is(Optional.of(conditionB)));
+    }
+
+    @Test
+    void firstUnmetCondition_skips_non_matching_condition_and_evaluates_matching_one() {
         final S3ScanProcessingCondition nonMatching = conditionWithPrefix(
                 MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("different-prefix/"));
         final S3ScanProcessingCondition matching = conditionWithPrefix(
@@ -266,74 +267,79 @@ class S3ScanProcessingConditionEvaluatorTest {
         stubManifest(MANIFEST_KEY, "{\"totalRecordCount\":100,\"processedRecordCount\":100}");
         when(expressionEvaluator.evaluateConditional(eq(WHEN_EXPRESSION), any(Event.class))).thenReturn(true);
 
-        assertThat(objectUnderTest.allConditionsMet(BUCKET, OBJECT_KEY, List.of(nonMatching, matching)), is(true));
+        assertThat(objectUnderTest.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(nonMatching, matching)),
+                is(Optional.empty()));
         // Only one S3 read — the non-matching condition was skipped
         verify(s3Client).getObject(any(GetObjectRequest.class));
     }
 
     // -------------------------------------------------------------------------
-    // findFirstMatching
+    // firstUnmetCondition — codec path
     // -------------------------------------------------------------------------
 
-    @Nested
-    class FindFirstMatching {
+    @Test
+    void firstUnmetCondition_when_codec_configured_and_expression_false_returns_condition() throws Exception {
+        final S3ScanProcessingCondition condition = conditionWithCodec(MANIFEST_FILE_NAME, WHEN_EXPRESSION, null, "json");
+        final InputCodec codec = mockCodecProducingEvent(Map.of("totalRecordCount", 100, "processedRecordCount", 50));
+        when(pluginFactory.loadPlugin(eq(InputCodec.class), any(PluginSetting.class))).thenReturn(codec);
+        final S3ScanProcessingConditionEvaluator evaluator = evaluatorWith(condition);
 
-        @Test
-        void when_conditions_is_null_then_returns_null() {
-            assertThat(objectUnderTest.findFirstMatching(OBJECT_KEY, null), is(nullValue()));
-        }
+        stubManifest(MANIFEST_KEY, "{\"totalRecordCount\":100,\"processedRecordCount\":50}");
+        when(expressionEvaluator.evaluateConditional(eq(WHEN_EXPRESSION), any(Event.class))).thenReturn(false);
 
-        @Test
-        void when_conditions_is_empty_then_returns_null() {
-            assertThat(objectUnderTest.findFirstMatching(OBJECT_KEY, Collections.emptyList()), is(nullValue()));
-        }
+        assertThat(evaluator.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition)),
+                is(Optional.of(condition)));
+    }
 
-        @Test
-        void when_no_condition_matches_then_returns_null() {
-            final S3ScanProcessingCondition condition = conditionWithPrefix(
-                    MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("no-match/"));
-            assertThat(objectUnderTest.findFirstMatching(OBJECT_KEY, List.of(condition)), is(nullValue()));
-        }
+    @Test
+    void firstUnmetCondition_when_codec_produces_no_events_returns_condition() throws Exception {
+        final S3ScanProcessingCondition condition = conditionWithCodec(MANIFEST_FILE_NAME, WHEN_EXPRESSION, null, "json");
+        final InputCodec noEventCodec = mockCodecProducingNoEvents();
+        when(pluginFactory.loadPlugin(eq(InputCodec.class), any(PluginSetting.class))).thenReturn(noEventCodec);
+        final S3ScanProcessingConditionEvaluator evaluator = evaluatorWith(condition);
 
-        @Test
-        void when_first_condition_matches_then_returns_it() {
-            final S3ScanProcessingCondition condition = conditionWithPrefix(
-                    MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("output/"));
-            assertThat(objectUnderTest.findFirstMatching(OBJECT_KEY, List.of(condition)), sameInstance(condition));
-        }
+        stubManifest(MANIFEST_KEY, "");
 
-        @Test
-        void when_condition_has_no_include_prefix_it_matches_any_object_key() {
-            final S3ScanProcessingCondition condition = conditionWithPrefix(
-                    MANIFEST_FILE_NAME, WHEN_EXPRESSION, null);
-            assertThat(objectUnderTest.findFirstMatching(OBJECT_KEY, List.of(condition)), sameInstance(condition));
-        }
+        assertThat(evaluator.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition)),
+                is(Optional.of(condition)));
+        verify(expressionEvaluator, never()).evaluateConditional(any(), any());
+    }
 
-        @Test
-        void when_first_condition_does_not_match_returns_second_matching_condition() {
-            final S3ScanProcessingCondition noMatch = conditionWithPrefix(
-                    MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("no-match/"));
-            final S3ScanProcessingCondition match = conditionWithPrefix(
-                    MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("output/"));
+    @Test
+    void firstUnmetCondition_codec_loaded_once_at_construction_not_per_object() throws Exception {
+        final S3ScanProcessingCondition condition = conditionWithCodec(MANIFEST_FILE_NAME, WHEN_EXPRESSION, null, "json");
+        final InputCodec codec = mockCodecProducingEvent(Map.of("totalRecordCount", 100, "processedRecordCount", 100));
+        when(pluginFactory.loadPlugin(eq(InputCodec.class), any(PluginSetting.class))).thenReturn(codec);
+        final S3ScanProcessingConditionEvaluator evaluator = evaluatorWith(condition);
 
-            assertThat(objectUnderTest.findFirstMatching(OBJECT_KEY, List.of(noMatch, match)), sameInstance(match));
-        }
+        stubManifest(MANIFEST_KEY, "{\"totalRecordCount\":100,\"processedRecordCount\":100}");
+        when(expressionEvaluator.evaluateConditional(any(), any())).thenReturn(true);
 
-        @Test
-        void returns_retry_settings_from_matched_condition() {
-            final S3ScanProcessingCondition condition = conditionWithPrefixAndRetry(
-                    MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("output/"), Duration.ofMinutes(3), 7);
+        evaluator.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition));
+        evaluator.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition));
+        evaluator.firstUnmetCondition(BUCKET, OBJECT_KEY, List.of(condition));
 
-            final S3ScanProcessingCondition result = objectUnderTest.findFirstMatching(OBJECT_KEY, List.of(condition));
+        // loadPlugin called exactly once during construction regardless of how many objects are evaluated
+        verify(pluginFactory).loadPlugin(eq(InputCodec.class), any(PluginSetting.class));
+    }
 
-            assertThat(result.getRetryDelay(), equalTo(Duration.ofMinutes(3)));
-            assertThat(result.getMaxRetry(), equalTo(7));
-        }
+    @Test
+    void firstUnmetCondition_without_codec_does_not_call_plugin_factory() {
+        final S3ScanProcessingCondition condition = conditionWithPrefix(
+                MANIFEST_FILE_NAME, WHEN_EXPRESSION, List.of("output/"));
+
+        new S3ScanProcessingConditionEvaluator(s3Client, expressionEvaluator, pluginFactory, List.of(condition));
+
+        verify(pluginFactory, never()).loadPlugin(any(), any(PluginSetting.class));
     }
 
     // -------------------------------------------------------------------------
     // Helpers
     // -------------------------------------------------------------------------
+
+    private S3ScanProcessingConditionEvaluator evaluatorWith(final S3ScanProcessingCondition... conditions) {
+        return new S3ScanProcessingConditionEvaluator(s3Client, expressionEvaluator, pluginFactory, List.of(conditions));
+    }
 
     private S3ScanProcessingCondition conditionWithPrefix(final String fileName,
                                                           final String when,
@@ -347,11 +353,21 @@ class S3ScanProcessingConditionEvaluatorTest {
                                                                    final Duration retryDelay,
                                                                    final int maxRetry) {
         final S3ScanProcessingCondition condition = new S3ScanProcessingCondition();
-        condition.setFileName(fileName);
+        condition.setObjectName(fileName);
         condition.setWhen(when);
-        condition.setIncludePrefix(includePrefix);
+        condition.setApplicablePrefix(includePrefix);
         condition.setRetryDelay(retryDelay);
         condition.setMaxRetry(maxRetry);
+        return condition;
+    }
+
+    private S3ScanProcessingCondition conditionWithCodec(final String fileName,
+                                                         final String when,
+                                                         final List<String> includePrefix,
+                                                         final String codecName) {
+        final S3ScanProcessingCondition condition = conditionWithPrefix(fileName, when, includePrefix);
+        final PluginModel codecModel = new PluginModel(codecName, Collections.emptyMap());
+        condition.setCodec(codecModel);
         return condition;
     }
 
@@ -362,5 +378,27 @@ class S3ScanProcessingConditionEvaluatorTest {
                 AbortableInputStream.create(new ByteArrayInputStream(bytes)));
         when(s3Client.getObject(GetObjectRequest.builder().bucket(BUCKET).key(key).build()))
                 .thenReturn(responseInputStream);
+    }
+
+    @SuppressWarnings("unchecked")
+    private InputCodec mockCodecProducingEvent(final Map<String, Object> data) throws Exception {
+        final InputCodec codec = org.mockito.Mockito.mock(InputCodec.class);
+        doAnswer(invocation -> {
+            final Consumer<Record<Event>> consumer = invocation.getArgument(1);
+            final Event event = org.opensearch.dataprepper.model.event.JacksonEvent.builder()
+                    .withEventType("event")
+                    .withData(data)
+                    .build();
+            consumer.accept(new Record<>(event));
+            return null;
+        }).when(codec).parse(any(InputStream.class), any(Consumer.class));
+        return codec;
+    }
+
+    @SuppressWarnings("unchecked")
+    private InputCodec mockCodecProducingNoEvents() throws Exception {
+        final InputCodec codec = org.mockito.Mockito.mock(InputCodec.class);
+        doAnswer(invocation -> null).when(codec).parse(any(InputStream.class), any(Consumer.class));
+        return codec;
     }
 }
